Implement stricter hashless hex color parsing

According to the spec[1] for both <number> and <dimension> we need to check
that the component values are non-negative and integers. Implement that and
add some subtests for it.

With this change we are passing the official test[2] linked from the spec.

BUG=611442

[1] https://quirks.spec.whatwg.org/#the-hashless-hex-color-quirk
[2] http://w3c-test.org/quirks-mode/hashless-hex-color.html

Review-Url: https://codereview.chromium.org/1963843002
Cr-Commit-Position: refs/heads/master@{#393502}

Former-commit-id: 08ced96eadd5a34cdd251a02e68d686d556f8a12